--- a/3-app_lista_de_tarefas/pubspec.yaml
+++ b/3-app_lista_de_tarefas/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl:
   flutter_slidable: ^0.6.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
